$NetBSD: CHANGES-2024,v 1.2621 2024/04/21 12:57:57 ryoon Exp $

Changes to the packages collection and infrastructure in 2024:

	Updated textproc/py-lxml to 5.0.0nb1 [wiz 2024-01-01]
	Updated graphics/ImageMagick6 to 6.9.13.2nb1 [gutteridge 2024-01-01]
	Updated multimedia/mate-media to 1.26.2 [gutteridge 2024-01-01]
	Updated meta-pkgs/mate to 1.26.1nb7 [gutteridge 2024-01-01]
	Updated devel/p5-MooseX-Getopt to 0.76 [mef 2024-01-01]
	Updated devel/p5-PAR-Packer to 1.061 [mef 2024-01-01]
	Updated devel/p5-Search-Elasticsearch to 8.00 [mef 2024-01-01]
	Updated devel/p5-String-Tagged to 0.22 [mef 2024-01-01]
	Updated devel/p5-String-Tagged-Terminal to 0.07 [mef 2024-01-01]
	Updated textproc/utf8-cpp to 4.0.5 [adam 2024-01-01]
	Updated misc/stellarium to 23.4 [adam 2024-01-01]
	Updated devel/blosc2 to 2.12.0 [adam 2024-01-01]
	Updated graphics/geeqie to 2.1nb6 [wiz 2024-01-01]
	Updated www/libsass to 3.6.6 [adam 2024-01-01]
	Updated security/pcsc-tools to 1.7.1 [adam 2024-01-01]
	Updated net/py-netaddr to 0.10.0 [adam 2024-01-01]
	Updated www/py-httpx to 0.26.0 [adam 2024-01-01]
	Updated www/py-test-httpx to 0.28.0 [adam 2024-01-01]
	Updated textproc/cJSON to 1.7.17 [adam 2024-01-01]
	Updated devel/py-rpds-py to 0.16.2 [adam 2024-01-01]
	Updated textproc/py-regex to 2023.12.25 [adam 2024-01-01]
	Updated graphics/py-seaborn to 0.13.1 [adam 2024-01-01]
	Added devel/bazel version 6.4.0 [ryoon 2024-01-01]
	Added pkgtools/pkgchkxx version 0.1.6nb1 [bsiegert 2024-01-01]
	Updated geography/qgis to 3.28.14 [gdt 2024-01-01]
	Updated lang/joker to 1.3.4 [gdt 2024-01-01]
	Updated sysutils/direnv to 2.33.0 [leot 2024-01-01]
	Updated sysutils/entr to 5.5 [leot 2024-01-01]
	Updated news/sfeed to 2.0 [leot 2024-01-01]
	Added graphics/py-glad2 version 2.0.4 [leot 2024-01-01]
	Added multimedia/libplacebo version 6.338.1 [leot 2024-01-01]
	Updated multimedia/mpv to 0.37.0 [leot 2024-01-01]
	Updated inputmethod/mozc-server to 2.26.4282.100nb25 [ryoon 2024-01-01]