@@ -1,8 +1,0 @@
-PulseAudio is a sound server for POSIX and Win32 systems. A sound server is
-basically a proxy for your sound applications. It allows you to do advanced
-operations on your sound data as it passes between your application and your
-hardware. Things like transferring the audio to a different machine, changing
-the sample format or channel count and mixing several sounds into one are
-easily achieved using a sound server.
-
-This meta package provides the applications for managing PulseAudio.
