@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2621 2024/04/21 12:57:57 ryoon Exp $
+$NetBSD: CHANGES-2024,v 1.2622 2024/04/21 13:32:58 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4325,3 +4325,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated devel/py-pluggy to 1.5.0 [adam 2024-04-21]
 	Updated sysutils/fzf to 0.50.0 [iquiw 2024-04-21]
 	Updated graphics/netpbm to 11.02.09 [ryoon 2024-04-21]
+	Removed meta-pkgs/pulseaudio-tools [wiz 2024-04-21]
